syntax = "proto3";

package xray.common.protocol;
option csharp_namespace = "Xray.Common.Protocol";
option go_package = "github.com/xtls/xray-core/common/protocol";
option java_package = "com.xray.common.protocol";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/protocol/user.proto";

message ServerEndpoint {
  enum RedirectStrategy {
    // No redirection.
    None = 0;

    // Redirect based on SRV record.
    BySrvRecord = 1;
  }

  xray.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  repeated xray.common.protocol.User user = 3;
  RedirectStrategy redirectStrategy = 4;
}
